--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.garsooon</groupId>
-    <artifactId>Plugin</artifactId>
+    <artifactId>CustomMessages</artifactId>
     <version>1.0.0</version>
 
     <packaging>jar</packaging>
